<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/enter_player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/player_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_name"
            android:minHeight="48dp"
           />

        <TextView
            android:text="@string/enter_player_points"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/player_points_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/player_points"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/submit_button"
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>